--- a/gb/20/2/14/n11867973.md
+++ b/gb/20/2/14/n11867973.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vntxf2407/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/vntxf2407/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vntxf2407/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eyk232/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eyk232/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eyk232/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华埠火灾楼要拆  商会建议盖高楼</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/691f6212bac0c161fa5ff91f7afd5018-600x400.jpg" />
 <h6>火灾楼旁沿街商铺主希望获得许可，将海报贴在防护墙上，让客户知道附近商家并未关门。 （蔡溶／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年02月14日讯】（大纪元记者蔡溶美国纽约报导）<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E5%8D%8E%E5%9F%A0.md">华埠</a>茂比利街70号大楼1月24日发生五级大火至今已有三周，楼宇局昨天（13日）进行<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md">火灾</a>后<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E6%88%BF%E5%B1%8B%E5%AE%89%E5%85%A8.md">房屋安全</a>鉴定，检测火灾后建筑物的结构安全性，最后从部分清空调回“全部清空”（Y1）。中华总商会昨天致信市议会议长，对重建大楼提出建议。</p>
+<p>【大纪元2020年02月14日讯】（大纪元记者蔡溶美国纽约报导）<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%8D%8E%E5%9F%A0.md#1">华埠</a>茂比利街70号大楼1月24日发生五级大火至今已有三周，楼宇局昨天（13日）进行<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>后<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E6%88%BF%E5%B1%8B%E5%AE%89%E5%85%A8.md#1">房屋安全</a>鉴定，检测火灾后建筑物的结构安全性，最后从部分清空调回“全部清空”（Y1）。中华总商会昨天致信市议会议长，对重建大楼提出建议。</p>
 <p>楼宇局昨天检查后注释：业主/租户已经把大楼里的收藏品等全部移走，可以恢复“全部清空”令。该建筑类别30对应的内容是“建筑物存在不稳/振动/结构稳定性问题”，意味着大楼四周的防护围墙还将存在很长时间。</p>
-<p><a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E5%8D%8E%E5%9F%A0.md">华埠</a>第三社区委员会委员陈家龄说，市政承包商在清除四、五、六楼被高温破坏的楼层残骸前，需要将整栋大楼包起来，工人周三已开始在楼外搭鹰架（脚手架）。与此同时，人力中心与相邻茂比利街和摆也街的沿街商铺老板在周二（11日）晚开了一次会，以解决由于摆也街持续封锁街道，以及茂比利街无法停车所带来的担忧和生意损失。摆也街沿街商铺主希望获得许可，将海报贴在防护墙上，明示客户“我们在开门营业”。</p>
-<p>另一个潜在的问题是<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md">火灾</a>楼周围的空气质量，市府是否会监控。陈家龄说，1960年代他在这栋楼内上学时，还记得用石棉材料包裹的管道，不知在1970年代后期的翻修过程中，是否清除了石棉。</p>
+<p><ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%8D%8E%E5%9F%A0.md#1">华埠</a>第三社区委员会委员陈家龄说，市政承包商在清除四、五、六楼被高温破坏的楼层残骸前，需要将整栋大楼包起来，工人周三已开始在楼外搭鹰架（脚手架）。与此同时，人力中心与相邻茂比利街和摆也街的沿街商铺老板在周二（11日）晚开了一次会，以解决由于摆也街持续封锁街道，以及茂比利街无法停车所带来的担忧和生意损失。摆也街沿街商铺主希望获得许可，将海报贴在防护墙上，明示客户“我们在开门营业”。</p>
+<p>另一个潜在的问题是<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>楼周围的空气质量，市府是否会监控。陈家龄说，1960年代他在这栋楼内上学时，还记得用石棉材料包裹的管道，不知在1970年代后期的翻修过程中，是否清除了石棉。</p>
 <p>陈家龄说，目前市府对商家的很多疑问还未具体解答，但市府代表说，当拆除和重建火灾楼之时，茂比利街最后会完全禁止通车。因此，在可预见的未来，唐人街还将面临更多的问题。</p>
 <p>市规划局资料显示，茂比利街70号大楼建于1900年，当时用于第23公立学校，可用空间有12,512平方英尺，产权归纽约市政府行政事务局（NYC Department of Citywide Administrative Services）拥有，以lot # 0001 和block # 00200地块编号列出。</p>
 <p>中华总商会昨日致信市议长张晟表示，茂比利街70号大楼物业被大火烧毁，需要重建。楼中的大型老人中心和其它文化服务机构一夜间失去空间，在唐人街的社会结构中留下很大的空白。</p>
@@ -18,42 +18,44 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/14/n11867973.htm">华埠火灾楼要拆  商会建议盖高楼</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827101.htm">华埠茂比利街再发生火灾 无人伤亡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/4/14/n10302600.htm">极缺安检员 渥太华房屋安全存在隐患</a></li>
-> <li><a href="https://www.epochtimes.com/gb/15/12/25/n4604056.htm">华埠一老楼平安夜突发火灾</a></li>
-> <li><a href="https://www.epochtimes.com/gb/15/5/15/n4435176.htm">澳堪培拉制定石棉房居住新规</a></li>
-> <li><a href="https://www.epochtimes.com/gb/12/3/19/n3544254.htm">华埠14日火灾 受灾户可申请紧急帮助</a></li>
-> <li><a href="https://www.epochtimes.com/gb/11/8/11/n3340998.htm">华埠格兰街火灾住户联名起诉房东</a></li>
-> <li><a href="https://www.epochtimes.com/gb/11/1/11/n3139116.htm">【图片新闻】华埠圣占士教堂发生火灾</a></li>
-> <li><a href="https://www.epochtimes.com/gb/11/1/9/n3136838.htm">温哥华东公寓楼被勒令关闭整修</a></li>
-> <li><a href="https://www.epochtimes.com/gb/10/5/25/n2918516.htm">家居装修九种错误方式 易引发安全事故</a></li>
-> <li><a href="https://www.epochtimes.com/gb/10/4/15/n2877824.htm">【图片新闻】国会议员关注华埠火灾</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852540.htm">政治局常委会要求落空 新医学专家否定老专家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11855017.htm">武汉火神山医院内部爆料：每天死亡数百人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11854939.htm">【翻墙必看】大疫当前 中共高层内斗加剧</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850031.htm">儿子滑雪意外受伤 袁咏仪：这个年过得不容易</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850022.htm">【胡乃文开讲】抗武汉肺炎 提升免疫力是关键！中医防疫3招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856378.htm">【专访】欧洲专家：新冠病毒疑似实验室产生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850690.htm">【十字路口】李文亮病逝 武汉肺炎致七大危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853087.htm">【疫情最前线】证据指中共研发致命生化武器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853273.htm">深圳突“封城”大批民众涌入香港</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/10/4/15/n2877824.md#1">【图片新闻】国会议员关注华埠火灾</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/10/5/25/n2918516.md#1">家居装修九种错误方式 易引发安全事故</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/11/1/9/n3136838.md#1">温哥华东公寓楼被勒令关闭整修</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/11/1/11/n3139116.md#1">【图片新闻】华埠圣占士教堂发生火灾</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/11/8/11/n3340998.md#1">华埠格兰街火灾住户联名起诉房东</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/12/3/19/n3544254.md#1">华埠14日火灾 受灾户可申请紧急帮助</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/15/5/15/n4435176.md#1">澳堪培拉制定石棉房居住新规</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/15/12/25/n4604056.md#1">华埠一老楼平安夜突发火灾</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/18/4/14/n10302600.md#1">极缺安检员 渥太华房屋安全存在隐患</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/1/28/n11827101.md#1">华埠茂比利街再发生火灾 无人伤亡</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/vntxf2407/djy/blob/master/gb/20/2/14/n11867973.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vntxf2407/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vntxf2407/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vntxf2407/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080214.md#1">蓬佩奥：大量证据将病毒和武汉实验室相联</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12077776.md#1">遭央视连骂三天 蓬佩奥反在中国人气飙升</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12080777.md#1">川普：中共犯了一个可怕错误 还不想承认</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080130.md#1">遭央视谩骂的第二个美国人 班农说了啥？</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081675.md#1">刘真离世44天 辛龙深夜发文悼亡妻</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12075345.md#1">流浪猫妈妈带小猫上医院获得帮助 网友赞爆</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080335.md#1">孙俪发文为女儿庆生 6岁小花又被亲到脸变形</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079058.md#1">蔡阿嘎二宝满月 喜收蔡总统暖心贺礼</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12076297.md#1">守成贤主宋仁宗 驾崩后连敌国也举国哀痛</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/12/n12024956.md#1">【馨香雅句】诗词中的女孩名</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/26/n11977935.md#1">【品读宋词】词中帝王 风流千古</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/30/n12071494.md#1">飘洋过海 移民艰辛路──我家族的故事（一）</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/22/n12051570.md#1">解读达芬奇未完之作《圣·杰洛姆》画中含意</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eyk232/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eyk232/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/14/n11867973.htm">华埠火灾楼要拆  商会建议盖高楼</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eyk232/djy/blob/master/gb/20/2/14/n11867973.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
