--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082531.md#1" title="中共“三桶油”港股集体暴跌 盘中全线下挫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2016/02/1602171636532403-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12080860.md#1" title="北京名中医逃亡加国 曝中共如何迫害律师""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/0016-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/eyk232/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://eyk232.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082947.md#1">昆士市Walmart关门 11名员工染疫1死</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083609.md#1">安徽80余人参加周岁宴 55人发烧呕吐</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083536.md#1">世卫应对疫情失职 参议员吁美国成立新机构</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083397.md#1">【拍案惊奇】韩朝边境驳火 传中共公安遭整肃</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083279.md#1">【最新疫情5·5】澳纽两国考虑恢复航班</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083628.md#1">为避免民众在公园聚集 瑞典政府倾倒鸡粪</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083584.md#1">纽约市长：医疗用品首次足够  供应未来一周</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083579.md#1">纽约警察工会：警察应从社交距离执法抽身出来</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082947.md#1">昆士市Walmart关门 11名员工染疫1死</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083609.md#1">安徽80余人参加周岁宴 55人发烧呕吐</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083536.md#1">世卫应对疫情失职 参议员吁美国成立新机构</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083397.md#1">【拍案惊奇】韩朝边境驳火 传中共公安遭整肃</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
